--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: annotation
+
+dashboard:
+    path: /admin
+    controller: App\Controller\Admin\DashboardController::index
